# plant-composer

./: .gitignore  ARCHITECTURE.md  ARCHITECTURE_DIAGRAM.md  CMakeLists.txt  COPYING  LICENSE  README.md  app_initializer.cpp  app_initializer.h  main.cpp
adapters/: CMakeLists.txt
adapters/components_library/: json_components_library_loader.cpp  json_components_library_loader.h
adapters/components_library/json/: components_library_json.cpp  components_library_json.h
adapters/settings/: qt_app_settings.cpp  qt_app_settings.h
assets/libraries/: motion.bson  standard.json
common_utils/: CMakeLists.txt
common_utils/json/: json_utils.cpp  json_utils.h
domain/: CMakeLists.txt
domain/components_library/: components_library_loader.h
domain/components_library/model/: component.h  constant_signal.h  library.h  signal_data_type.cpp  signal_data_type.h  variable_signal.h
domain/settings/: app_settings.h
src/: architecture.md  architecture_improvements.md  main.cpp  plant_composer_application.cpp  plant_composer_application.h
src/adapters/: CMakeLists.txt
src/adapters/common/: quuid_id_factory.cpp  quuid_id_factory.h  spdlog_logger.cpp  spdlog_logger.h  spdlog_logger_factory.cpp  spdlog_logger_factory.h  status_bar_notifier.cpp  status_bar_notifier.h
src/adapters/components_library/: json_components_library_loader.cpp  json_components_library_loader.h
src/adapters/components_library/json/: components_library_json.cpp  components_library_json.h
src/adapters/project/: flat_buffer_project_loader.cpp  flat_buffer_project_loader.h  flat_buffer_project_loader.tpp  flat_buffer_project_parser.cpp  flat_buffer_project_parser.h
src/adapters/serialization/flatbuffers/: diagram.fbs  diagram_generated.h  project.fbs  project_generated.h
src/adapters/settings/: qt_app_settings.cpp  qt_app_settings.h
src/adapters/shared/: quuid_id_factory.cpp  quuid_id_factory.h  spdlog_logger.cpp  spdlog_logger.h
src/common_utils/: CMakeLists.txt
src/common_utils/id/: id_utils.cpp  id_utils.h
src/common_utils/json/: json_utils.cpp  json_utils.h
src/domain/: CMakeLists.txt
src/domain/chart_editor/model/: chart.cpp  chart.h  component_instance.cpp  component_instance.h  graphic_item_position.h
src/domain/common/: id_factory.h  ilogger.h  ilogger_factory.h  iuser_notifier.h
src/domain/components_library/: components_library_loader.h
src/domain/components_library/model/: component.h  component_io.h  component_type.h  data_type.cpp  data_type.h  library.h
src/domain/diagram/: component_instance_factory.cpp  component_instance_factory.h
src/domain/diagram/model/: component_instance.cpp  component_instance.h  connection.cpp  connection.h  diagram.cpp  diagram.h  graphic_item_position.h  node_transform.h
src/domain/project/: project_loader.h
src/domain/project/model/: project.cpp  project.h  project_node.cpp  project_node.h  project_node.tpp
src/domain/settings/: app_settings.h
src/domain/shared/: id_factory.h  ilogger.h
src/resources/: resources.qrc
src/ui/: CMakeLists.txt  mime_types.h
src/ui/actions_manager/: actions_manager.cpp  actions_manager.h  shortcuts_registry.cpp  shortcuts_registry.h
src/ui/chart_editor/: chart_editor_scene.cpp  chart_editor_scene.h  chart_editor_view.cpp  chart_editor_view.h  chart_interface.cpp  chart_interface.h  component_instance_view.cpp  component_instance_view.h
src/ui/components_library/: components_library_model.cpp  components_library_model.h  components_library_view.cpp  components_library_view.h  libraries_view_manager.cpp  libraries_view_manager.h
src/ui/components_library/component_tree/: components_library_model.cpp  components_library_model.h  components_library_view.cpp  components_library_view.h
src/ui/components_library/properties_dialog/: component_properties_view.cpp  component_properties_view.h  library_component_properties_view.cpp  library_component_properties_view.h
src/ui/diagram_editor/: diagram_editor_manager.cpp  diagram_editor_manager.h  diagram_manager.cpp  diagram_manager.h  diagram_service.cpp  diagram_service.h  new_diagram_dialog.cpp  new_diagram_dialog.h
src/ui/diagram_editor/editor_widget/: component_instance_view.cpp  component_instance_view.h  component_view.cpp  component_view.h  component_view_model.cpp  component_view_model.h  diagram_editor_scene.cpp  diagram_editor_scene.h  diagram_editor_view.cpp  diagram_editor_view.h  diagram_view_model.cpp  diagram_view_model.h
src/ui/main_window/: app_layout_manager.cpp  app_layout_manager.h  app_main_windows.cpp  app_main_windows.h  main_window.cpp  main_window.h
src/ui/main_window/sidebar/: side_bar.cpp  side_bar.h  side_bar_item.cpp  side_bar_item.h  side_bar_tabs.cpp  side_bar_tabs.h
src/ui/project/: clipboard.h  new_diagram_dialog.cpp  new_diagram_dialog.h  new_project_dialog.cpp  new_project_dialog.h  project_actions.cpp  project_actions.h  project_properties_dialog.cpp  project_properties_dialog.h  project_view_manager.cpp  project_view_manager.h  project_view_model.cpp  project_view_model.h
src/ui/project/project_tree/: project_node_item.cpp  project_node_item.h  project_tree_item_type.cpp  project_tree_item_type.h  project_tree_model.cpp  project_tree_model.h  project_tree_types.cpp  project_tree_types.h  project_tree_view.cpp  project_tree_view.h
tests/integration/: CMakeLists.txt  test_component_view_model.cpp  test_diagram_view_model.cpp  test_flat_buffer_project_loader.cpp  test_json_components_library_loader.cpp  test_qt_app_settings.cpp
tests/unit/: CMakeLists.txt  main.cpp  test_app_settings.cpp  test_app_settings.h  test_components_library.cpp  test_components_library.h  test_connection.cpp  test_connection.h  test_diagram.cpp  test_diagram.h  test_project.cpp  test_project.h
translations/: plant-composer_en_US.ts  plant-composer_pt_BR.ts
ui/: CMakeLists.txt
ui/components_library/: components_library_model.cpp  components_library_model.h  components_library_view.cpp  components_library_view.h
ui/main_window/: main_window.cpp  main_window.h  main_window.ui
(+2 files in other folders)
